tests/unhandled-op.m31

mltype x = x end

constant A : Type
constant a, b : A
constant (+) : A -> A -> A

operation Not_found : empty

fail Not_found

operation info : debug x -> judgement -> (_ -> _) -> _

fail info (!! x) (a + b) (fun x => x)

